# OpenCowork

./: .gitattributes  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: skill-optimization-v0.3.0.md
src/: App.vue  i18n.ts  main.ts
src-tauri/: Cargo.toml  opencowork-updater.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/skills/skill-authoring/: SKILL.md
src-tauri/resources/skills/skill-authoring/assets/: template.md
src-tauri/resources/skills/skill-authoring/references/: REFERENCE.md
src-tauri/resources/skills/skill-authoring/scripts/: run.ps1
src-tauri/resources/skills/skill-creator/: SKILL.md
src-tauri/resources/skills/skill-creator/assets/: template.md
src-tauri/resources/skills/skill-creator/references/: output-patterns.md  workflows.md
src-tauri/resources/skills/skill-creator/scripts/: init_skill.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/analysis/: diff.rs  extractor.rs  mod.rs
src-tauri/src/assistant/: context.rs  intent.rs  mod.rs
src-tauri/src/capture/: mod.rs  scheduler.rs  screen.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/model/: api.rs  error.rs  mod.rs  ollama.rs  traits.rs
src-tauri/src/skills/: mod.rs  parser.rs
src-tauri/src/storage/: mod.rs
src/components/Chat/: MessageItem.vue
src/stores/: capture.ts  chat.ts  locale.ts  settings.ts  skills.ts
src/utils/: markdown.ts
src/views/: HistoryView.vue  MainView.vue  NotificationView.vue  SettingsView.vue
