[package]
name = "screen-assistant"
version = "0.1.0"
description = "Screen monitoring assistant powered by AI"
authors = ["you"]
edition = "2021"

[lib]
name = "screen_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
screenshots = "0.8"
image = "0.24"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
parking_lot = "0.12"
regex = "1"
async-trait = "0.1"
serde_yaml = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
