[package]
name = "opencowork"
version = "0.2.4"
description = "OpenCowork - AI-powered screen monitoring assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "opencowork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
screenshots = "0.8"
image = "0.24"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
parking_lot = "0.12"
regex = "1"
async-trait = "0.1"
serde_yaml = "0.9"
glob = "0.3"
walkdir = "2"
sys-locale = "0.3"
zip = "0.6"
quick-xml = "0.31"
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Globalization"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
